Update pulumi/pkg and pulumi/sdk dependencies to v3.109.0 (#553)
* Update pulumi/pkg and pulumi/sdk dependencies to v3.109.0

* CHANGELOG

* Fix typo

* Try a different linter setup

* Improve grammar

* Lint

* Update Go

* Pin providers in affected examples

* make get_testdata

* Work around non-existing provider loads panicking

* PULUMI_ACCEPT=1 go test to accept golden test changes

* Accept translation of a new example

* Improve error message from the testing framework

* Restore transpiled_examples tests for examples with explicit pins

* Fix get_schemas to respsect the new schema location

* Resolve the TODO

* Adjust to the new version of websiteUrl from aws-native

* Accept change in transpilation

---------

Co-authored-by: Fraser Waters <fraser@pulumi.com>

--- a/examples/webserver/Pulumi.yaml
+++ b/examples/webserver/Pulumi.yaml
@@ -36,10 +36,16 @@ resources:
           nohup python -m SimpleHTTPServer 80 &
       vpcSecurityGroupIds:
         - ${WebSecGrp}
+  DefaultProvider:
+    type: pulumi:providers:aws
+    options:
+      version: 5.16.2
   UsEast2Provider:
     type: pulumi:providers:aws
     properties:
       region: us-east-2
+    options:
+      version: 5.16.2
   MyBucket:
     type: aws:s3:Bucket
     options:
