Migrate aws:getAmi -> aws:ec2:getAmi
Responding to https://github.com/pulumi/pulumi-aws/issues/3595

--- a/examples/webserver/Pulumi.yaml
+++ b/examples/webserver/Pulumi.yaml
@@ -8,7 +8,7 @@ config:
 variables:
   ec2ami:
     fn::invoke:
-      function: aws:getAmi
+      function: aws:ec2:getAmi
       arguments:
         filters:
           - name: name
