implement bazel as build system
Use bazel as build system.  Right now it's working side by side with
the old Makefiles, and we're adding an extra CI job to run the builds.
Eventually this can completely replace the Makefile based builds.

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ Pulumi.*.yaml
 stack.json
 goreleaser/
 bin/*
+bazel-*
 
 # Other cannot be downloaded, as it does not correspond to a real package.
 !pkg/pulumiyaml/testing/test/testdata/other.json
