switch to non-deprecated flag for goreleaser
The --rm-dist flag for goreleaser has been deprecated a while ago, and
replaced with --clean.  In the new version this flag has been removed,
so our release process is now failing.  Switch to the non-deprecated
flag.

See also https://goreleaser.com/deprecations/#-rm-dist

--- a/.github/workflows/publish-release.yaml
+++ b/.github/workflows/publish-release.yaml
@@ -29,4 +29,4 @@ jobs:
     needs: [test, lint]
     uses: ./.github/workflows/stage-publish.yml
     with:
-      goreleaser-args: -p 10 -f .goreleaser.yml --rm-dist --skip-validate --timeout 60m0s --release-notes=CHANGELOG_PENDING.md
+      goreleaser-args: -p 10 -f .goreleaser.yml --clean --skip-validate --timeout 60m0s --release-notes=CHANGELOG_PENDING.md
