--- a/examples/pulumi-variable/working-dir/Main.yaml
+++ b/examples/pulumi-variable/working-dir/Main.yaml
@@ -2,3 +2,4 @@ outputs:
   cwd: "${pulumi.cwd}"
   stack: "${pulumi.stack}"
   project: "${pulumi.project}"
+  organization: "${pulumi.organization}"
