build statically linked binaries with CGO disabled
In https://github.com/pulumi/pulumi-yaml/pull/632 we switched the
build from running on MacOS to Ubuntu.  On MacOS CGO is disabled by
default, and switching to Ubuntu means this is turned on.  We however
want to build statically linked binaries since they are easier to deal
with.  Set that up in the goreleaser.yml directly.

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -17,6 +17,8 @@ archives:
 builds:
 - id: pulumi-language-yaml
   binary: pulumi-language-yaml
+  env:
+    - CGO_ENABLED=0
   goarch:
   - amd64
   - arm64
@@ -31,6 +33,8 @@ builds:
   main: ./cmd/pulumi-language-yaml/
 - id: pulumi-converter-yaml
   binary: pulumi-converter-yaml
+  env:
+    - CGO_ENABLED=0
   goarch:
   - amd64
   - arm64
