--- a/.github/workflows/stage-test.yml
+++ b/.github/workflows/stage-test.yml
@@ -66,8 +66,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repo
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
         with:
+          submodules: recursive
           ref: ${{ inputs.commit-ref }}
       - name: Install Go
         uses: actions/setup-go@v5
