Enable l1-output-string
This required two fixes.

Firstly when reading in a literal string from PCL we need to re-escape
any `$${` escape sequences.

Secondly it's valid to have an empty string as a stack export. We fix
this by making sure empty strings from PCL write out as `""` rather than
nothing, as the latter caused the yaml runtime to think it was an
empty/null/missing key rather than an empty string.

--- a/pkg/pulumiyaml/testing/test/testdata/aws-fargate-output-versioned-pp/yaml/aws-fargate-output-versioned.yaml
+++ b/pkg/pulumiyaml/testing/test/testdata/aws-fargate-output-versioned-pp/yaml/aws-fargate-output-versioned.yaml
@@ -27,7 +27,7 @@ resources:
         fn::toJSON:
           Version: 2008-10-17
           Statement:
-            - Sid:
+            - Sid: ""
               Effect: Allow
               Principal:
                 Service: ecs-tasks.amazonaws.com
