--- a/pkg/pulumiyaml/testing/test/testdata/aws-fargate-pp/yaml/aws-fargate.yaml
+++ b/pkg/pulumiyaml/testing/test/testdata/aws-fargate-pp/yaml/aws-fargate.yaml
@@ -27,7 +27,7 @@ resources:
         fn::toJSON:
           Version: 2008-10-17
           Statement:
-            - Sid:
+            - Sid: ""
               Effect: Allow
               Principal:
                 Service: ecs-tasks.amazonaws.com
