--- a/pkg/pulumiyaml/testing/test/testdata/aws-optionals-pp/yaml/aws-optionals.yaml
+++ b/pkg/pulumiyaml/testing/test/testdata/aws-optionals-pp/yaml/aws-optionals.yaml
@@ -8,8 +8,8 @@ resources:
 variables:
   policyDocument:
     fn::invoke:
-      Function: aws:iam:getPolicyDocument
-      Arguments:
+      function: aws:iam:getPolicyDocument
+      arguments:
         statements:
           - sid: '1'
             actions:
