--- a/pkg/pulumiyaml/testing/test/testdata/aws-webserver-pp/yaml/aws-webserver.yaml
+++ b/pkg/pulumiyaml/testing/test/testdata/aws-webserver-pp/yaml/aws-webserver.yaml
@@ -27,8 +27,8 @@ variables:
   # Get the ID for the latest Amazon Linux AMI.
   ami:
     fn::invoke:
-      Function: aws:getAmi
-      Arguments:
+      function: aws:getAmi
+      arguments:
         filters:
           - name: name
             values:
