--- a/pkg/pulumiyaml/testing/test/testdata/simplified-invokes-pp/yaml/simplified-invokes.yaml
+++ b/pkg/pulumiyaml/testing/test/testdata/simplified-invokes-pp/yaml/simplified-invokes.yaml
@@ -1,31 +1,31 @@
 variables:
   everyArg:
     fn::invoke:
-      Function: std:AbsMultiArgs
-      Arguments:
+      function: std:AbsMultiArgs
+      arguments:
         a: 10
         b: 20
         c: 30
   onlyRequiredArgs:
     fn::invoke:
-      Function: std:AbsMultiArgs
-      Arguments:
+      function: std:AbsMultiArgs
+      arguments:
         a: 10
   optionalArgs:
     fn::invoke:
-      Function: std:AbsMultiArgs
-      Arguments:
+      function: std:AbsMultiArgs
+      arguments:
         a: 10
         c: 30
   nestedUse:
     fn::invoke:
-      Function: std:AbsMultiArgs
-      Arguments:
+      function: std:AbsMultiArgs
+      arguments:
         a: ${everyArg}
         b:
           fn::invoke:
-            Function: std:AbsMultiArgs
-            Arguments:
+            function: std:AbsMultiArgs
+            arguments:
               a: 42
 outputs:
   result: ${nestedUse}
