--- a/cmd/pulumi-language-yaml/testdata/projects/l2-provider-grpc-config-secret/Main.yaml
+++ b/cmd/pulumi-language-yaml/testdata/projects/l2-provider-grpc-config-secret/Main.yaml
@@ -5,60 +5,60 @@ resources:
     properties:
       string1:
         fn::invoke:
-          Function: config-grpc:toSecret
-          Arguments:
+          function: config-grpc:toSecret
+          arguments:
             string1: SECRET
-          Return: string1
+          return: string1
       int1:
         fn::invoke:
-          Function: config-grpc:toSecret
-          Arguments:
+          function: config-grpc:toSecret
+          arguments:
             int1: 1.23456789e+09
-          Return: int1
+          return: int1
       num1:
         fn::invoke:
-          Function: config-grpc:toSecret
-          Arguments:
+          function: config-grpc:toSecret
+          arguments:
             num1: 123456.789
-          Return: num1
+          return: num1
       bool1:
         fn::invoke:
-          Function: config-grpc:toSecret
-          Arguments:
+          function: config-grpc:toSecret
+          arguments:
             bool1: true
-          Return: bool1
+          return: bool1
       listString1:
         fn::invoke:
-          Function: config-grpc:toSecret
-          Arguments:
+          function: config-grpc:toSecret
+          arguments:
             listString1:
               - SECRET
               - SECRET2
-          Return: listString1
+          return: listString1
       listString2: # TODO[pulumi/pulumi#17535] this currently breaks Go compilation unfortunately.
       #     # mapString1 = invoke("config-grpc:index:toSecret", {mapString1 = { key1 = "SECRET", key2 = "SECRET2" }}).mapString1
         - VALUE
         - fn::invoke:
-            Function: config-grpc:toSecret
-            Arguments:
+            function: config-grpc:toSecret
+            arguments:
               string1: SECRET
-            Return: string1
+            return: string1
       mapString2: # TODO[pulumi/pulumi#17535] this breaks Go compilation as well.
       #     # os1 = invoke("config-grpc:index:toSecret", {objString1 = { x = "SECRET" }}).objString1
         key1: value1
         key2:
           fn::invoke:
-            Function: config-grpc:toSecret
-            Arguments:
+            function: config-grpc:toSecret
+            arguments:
               string1: SECRET
-            Return: string1
+            return: string1
       objString2:
         x:
           fn::invoke:
-            Function: config-grpc:toSecret
-            Arguments:
+            function: config-grpc:toSecret
+            arguments:
               string1: SECRET
-            Return: string1
+            return: string1
   config:
     type: config-grpc:ConfigFetcher
     options:
