--- a/cmd/pulumi-language-yaml/testdata/projects/l2-target-up-with-new-dependency/1/Main.yaml
+++ b/cmd/pulumi-language-yaml/testdata/projects/l2-target-up-with-new-dependency/1/Main.yaml
@@ -8,7 +8,7 @@ resources:
     properties:
       value: true
     options:
-      dependson:
+      dependsOn:
         - ${dep}
   dep:
     type: simple:Resource
