--- a/pkg/pulumiyaml/testing/test/testdata/aws-fargate-output-versioned-pp/yaml/aws-fargate-output-versioned.yaml
+++ b/pkg/pulumiyaml/testing/test/testdata/aws-fargate-output-versioned-pp/yaml/aws-fargate-output-versioned.yaml
@@ -95,7 +95,7 @@ resources:
           containerName: my-app
           containerPort: 80
     options:
-      dependson:
+      dependsOn:
         - ${webListener}
 variables:
   # Read the default VPC and public subnets, which we will use.
