--- a/pkg/pulumiyaml/testing/test/testdata/aws-resource-options-pp/yaml/aws-resource-options.yaml
+++ b/pkg/pulumiyaml/testing/test/testdata/aws-resource-options-pp/yaml/aws-resource-options.yaml
@@ -7,9 +7,9 @@ resources:
     type: aws:s3:Bucket
     options:
       provider: ${provider}
-      dependson:
+      dependsOn:
         - ${provider}
-      ignorechanges:
+      ignoreChanges:
         - bucket
         - lifecycleRules[0]
       protect: true
