--- a/pkg/pulumiyaml/testing/test/testdata/depends-on-array-pp/yaml/depends-on-array.yaml
+++ b/pkg/pulumiyaml/testing/test/testdata/depends-on-array-pp/yaml/depends-on-array.yaml
@@ -25,7 +25,7 @@ resources:
       contentType: text/html
       acl: public-read
     options:
-      dependson:
+      dependsOn:
         - ${publicAccessBlock}
         - ${ownershipControls}
 outputs:
