--- a/pkg/pulumiyaml/testing/test/testdata/aws-resource-options-multiple-providers.pp/yaml/aws-resource-options-multiple-providers.yaml
+++ b/pkg/pulumiyaml/testing/test/testdata/aws-resource-options-multiple-providers.pp/yaml/aws-resource-options-multiple-providers.yaml
@@ -11,9 +11,9 @@ resources:
     type: aws:s3:Bucket
     options:
       provider: ${provider}
-      dependson:
+      dependsOn:
         - ${provider}
-      ignorechanges:
+      ignoreChanges:
         - bucket
         - lifecycleRules[0]
       protect: true
