[codegen] Generate invoke options from PCL (#678)
### Description

This PR handles invoke options from PCL and emitting them in YAML
programs

Implements conformance tests `l2-invoke-simple`, `l2-invoke-variants`
and `l2-invoke-options`

~Since it relies on https://github.com/pulumi/pulumi/pull/17696 I've
updated `pulumi/{sdk/pkg}` versions in go.mod to v3.138-dev but I would
like to wait until the release of v3.139 before we merge this (hence why
this PR is a draft)~

EDIT: relies on https://github.com/pulumi/pulumi/pull/17696 so I've
updated the pulumi/{sdk/pkg} dependency to v3.139.0 which allowed
specifying PCL invoke options

--- a/cmd/pulumi-language-yaml/testdata/projects/l2-invoke-simple/Main.yaml
+++ b/cmd/pulumi-language-yaml/testdata/projects/l2-invoke-simple/Main.yaml
@@ -1,13 +1,13 @@
 outputs:
   hello:
     fn::invoke:
-      Function: simple-invoke:myInvoke
-      Arguments:
+      function: simple-invoke:myInvoke
+      arguments:
         value: hello
-      Return: result
+      return: result
   goodbye:
     fn::invoke:
-      Function: simple-invoke:myInvoke
-      Arguments:
+      function: simple-invoke:myInvoke
+      arguments:
         value: goodbye
-      Return: result
+      return: result
