Update to pulumi v3.142.0

--- a/cmd/pulumi-language-yaml/testdata/projects/l2-invoke-variants/Main.yaml
+++ b/cmd/pulumi-language-yaml/testdata/projects/l2-invoke-variants/Main.yaml
@@ -1,6 +1,8 @@
 resources:
   res:
     type: simple-invoke:StringResource
+    properties:
+      text: hello
 outputs:
   outputInput:
     fn::invoke:
