--- a/.changes/unreleased/Improvements-693.yaml
+++ b/.changes/unreleased/Improvements-693.yaml
@@ -1,6 +1,6 @@
 component: runtime
 kind: Improvements
-body: Allow specifiying dependencies for output invokes
+body: Allow specifying dependencies for output invokes
 time: 2024-11-20T14:58:17.346265+01:00
 custom:
     PR: "693"
