--- a/.github/workflows/stage-lint.yml
+++ b/.github/workflows/stage-lint.yml
@@ -22,7 +22,7 @@ jobs:
           go-version: ${{ env.GO_VERSION }}
           cache-dependency-path: |
             **/go.sum
-      - run: go mod tidy -go=1.21
+      - run: go mod tidy
       - name: Fail if go mod tidy changed go.mod
         run: |
           if [ -n "$(git status --porcelain)" ]; then
