--- a/.changie.yaml
+++ b/.changie.yaml
@@ -10,6 +10,7 @@ kinds:
   auto: minor
 - label: Bug Fixes
   auto: patch
+  key: bug-fixes
 # Custom fragment file format because we use / in the component name.
 fragmentFileFormat: '{{.Kind}}-{{.Custom.PR}}'
 components:
