--- a/cmd/pulumi-language-yaml/testdata/projects/l2-namespaced-provider/Main.yaml
+++ b/cmd/pulumi-language-yaml/testdata/projects/l2-namespaced-provider/Main.yaml
@@ -1,5 +1,10 @@
 resources:
+  componentRes:
+    type: component:ComponentCustomRefOutput
+    properties:
+      value: foo-bar-baz
   res:
     type: namespaced:Resource
     properties:
       value: true
+      resourceRef: ${componentRes.ref}
