--- a/.mise.toml
+++ b/.mise.toml
@@ -7,7 +7,7 @@ _.path = [
 
 [tools]
 go = "1.23"
-golangci-lint = "latest"
+golangci-lint = "1.64.2"
 jq = "latest"
 "ubi:cue-lang/cue" = "v0.12.0"
 "ubi:pulumi/pulumictl" = "v0.0.48"
