Fix YAML AMI lookups

--- a/examples/webserver/Pulumi.yaml
+++ b/examples/webserver/Pulumi.yaml
@@ -12,7 +12,7 @@ variables:
       arguments:
         filters:
           - name: name
-            values: ["amzn2-ami-hvm-2.0.20231218.0-x86_64-ebs"]
+            values: ["amzn2-ami-hvm-*-x86_64-ebs"]
         owners: ["137112412989"]
         mostRecent: true
       return: id
