--- a/.mise.toml
+++ b/.mise.toml
@@ -6,10 +6,11 @@ _.path = [
 ]
 
 [tools]
+changie = "latest"
+cue = "v0.12.0"
 go = "1.23"
 golangci-lint = "1.64.2"
 jq = "latest"
-"ubi:cue-lang/cue" = "v0.12.0"
-"ubi:pulumi/pulumictl" = "v0.0.48"
+"ubi:pulumi/pulumictl" = "latest"
 
 [plugins]
