Use ESC secrets
These changes migrate this repo's GitHub Actions Workflows to use ESC secrets instead of GitHub Secrets.

The changes are largely mechanical:

- Common configuration for all ESC actions within a workflow is added to the workflow's environment variables
- Permissions are expanded as necessary for workflows that do not grant `id-token: write` permissions
	- `read-all` permissions are replaced with the union of all explicit read permissions and `id-token: write`
	- Default permissions are replaced with `write-all`, which is the equivalent of all explicit write permissions and
	  `id-token: write`
	- Explicit permissions are modified to grant `id-token: write`
- A step that fetches ESC secrets and populates environment variables is added to each step that reads secrets
- Direct references to secrets within the job are replaced with references to the step's outputs

All ESC actions are configured to fetch secrets from a shared ESC environment that contains secrets migrated from GitHub Actions. The ESC action performs its own OIDC exchange to obtain a Pulumi Access Token.

--- a/.github/workflows/stage-test.yml
+++ b/.github/workflows/stage-test.yml
@@ -1,3 +1,4 @@
+permissions: write-all # Equivalent to default permissions plus id-token: write
 name: Test
 
 on:
@@ -36,35 +37,37 @@ on:
         required: false
         type: boolean
     secrets:
-      PULUMI_ACCESS_TOKEN:   { required: false }
-      AWS_ACCESS_KEY_ID:     { required: false }
-      AWS_SECRET_ACCESS_KEY: { required: false }
-      AWS_CI_ROLE_ARN:       { required: false }
-      ARM_CLIENT_ID:         { required: false }
-      ARM_CLIENT_SECRET:     { required: false }
-      ARM_SUBSCRIPTION_ID:   { required: false }
-      ARM_TENANT_ID:         { required: false }
-      CODECOV_TOKEN:         { required: false }
-
+      PULUMI_ACCESS_TOKEN: {required: false}
+      AWS_ACCESS_KEY_ID: {required: false}
+      AWS_SECRET_ACCESS_KEY: {required: false}
+      AWS_CI_ROLE_ARN: {required: false}
+      ARM_CLIENT_ID: {required: false}
+      ARM_CLIENT_SECRET: {required: false}
+      ARM_SUBSCRIPTION_ID: {required: false}
+      ARM_TENANT_ID: {required: false}
+      CODECOV_TOKEN: {required: false}
 
 env:
   PULUMI_LIVE_TEST: ${{ inputs.live-test }}
   PULUMI_API: https://api.pulumi-staging.io
-  PULUMI_ACCESS_TOKEN: ${{ secrets.PULUMI_ACCESS_TOKEN }}
   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   AWS_REGION: us-west-2
-  ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
-  ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
-  ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
-  ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
   PULUMI_TEST_PARALLEL: false
   NODE_OPTIONS: --max-old-space-size=3072
+  ESC_ACTION_OIDC_AUTH: true
+  ESC_ACTION_OIDC_ORGANIZATION: pulumi
+  ESC_ACTION_OIDC_REQUESTED_TOKEN_TYPE: urn:pulumi:token-type:access_token:organization
+  ESC_ACTION_ENVIRONMENT: imports/github-secrets
+  ESC_ACTION_EXPORT_ENVIRONMENT_VARIABLES: PULUMI_ACCESS_TOKEN,ARM_CLIENT_ID,ARM_CLIENT_SECRET,ARM_SUBSCRIPTION_ID,ARM_TENANT_ID
 
 jobs:
   test:
     name: Test
     runs-on: ubuntu-latest
     steps:
+      - name: Fetch secrets from ESC
+        id: esc-secrets
+        uses: pulumi/esc-action@v1
       - name: Checkout Repo
         uses: actions/checkout@v4
         with:
@@ -102,7 +105,7 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           role-duration-seconds: 3600
           role-session-name: pulumi-yaml@githubActions
-          role-to-assume: ${{ secrets.AWS_CI_ROLE_ARN }}
+          role-to-assume: ${{ steps.esc-secrets.outputs.AWS_CI_ROLE_ARN }}
       - name: Install Pulumi CLI
         uses: pulumi/actions@df5a93ad715135263c732ba288301bd044c383c0 # v6
         with:
@@ -144,7 +147,7 @@ jobs:
           files: "*"
           fail_ci_if_error: false
           verbose: true
-          token: ${{ secrets.CODECOV_TOKEN }}
+          token: ${{ steps.esc-secrets.outputs.CODECOV_TOKEN }}
 
     strategy:
       fail-fast: false
