--- a/.changes/unreleased/bug-fixes-864.yaml
+++ b/.changes/unreleased/bug-fixes-864.yaml
@@ -1,6 +1,6 @@
 component: runtime
 kind: bug-fixes
-body: Object values are now correctly decoded within YAML programs
+body: Decode object values correctly within YAML programs
 time: 2025-09-08T15:03:06.003806+02:00
 custom:
     PR: "864"
