Add `hideDiffs` as a resource option

--- a/cmd/pulumi-language-yaml/testdata/projects/l2-resource-option-hide-diffs/Main.yaml
+++ b/cmd/pulumi-language-yaml/testdata/projects/l2-resource-option-hide-diffs/Main.yaml
@@ -3,7 +3,9 @@ resources:
     type: simple:Resource
     properties:
       value: true
-    options: {}
+    options:
+      hideDiffs:
+        - value
   notHideDiffs:
     type: simple:Resource
     properties:
