--- a/cmd/pulumi-language-yaml/testdata/projects/l2-resource-option-deleted-with/Main.yaml
+++ b/cmd/pulumi-language-yaml/testdata/projects/l2-resource-option-deleted-with/Main.yaml
@@ -7,7 +7,8 @@ resources:
     type: simple:Resource
     properties:
       value: true
-    options: {}
+    options:
+      deletedWith: ${target}
   notDeletedWith:
     type: simple:Resource
     properties:
