--- a/.changes/unreleased/Improvements-939.yaml
+++ b/.changes/unreleased/Improvements-939.yaml
@@ -1,6 +1,6 @@
 component: runtime
 kind: Improvements
-body: Add pulumi.requiredPulumiVersion
+body: Add pulumi.requiredVersion
 time: 2026-02-03T17:22:10.560402+01:00
 custom:
-    PR: "939"
+  PR: "939"
