--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,10 +15,10 @@ jobs:
       - name: Fetch Tags
         run: |
           git fetch --quiet --prune --tags
-      - name: Set up Go 1.24.x
+      - name: Set up Go
         uses: actions/setup-go@v5
         with:
-          go-version: 1.24.x
+          go-version-file: go.mod
       - name: Configure Go cache
         id: go-cache-paths
         run: |
