--- a/.github/workflows/stage-lint.yml
+++ b/.github/workflows/stage-lint.yml
@@ -8,7 +8,6 @@ permissions: read-all
 env:
   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   GOLANGCI_LINT_VERSION: v2.5.0
-  GO_VERSION: v1.24.x
 
 jobs:
   lint:
@@ -17,9 +16,9 @@ jobs:
       - name: Checkout Repo
         uses: actions/checkout@v2
       - name: Set up Go
-        uses: actions/setup-go@v5
+        uses: actions/setup-go@v6
         with:
-          go-version: ${{ env.GO_VERSION }}
+          go-version-file: go.mod
           cache-dependency-path: |
             **/go.sum
       - run: go mod tidy
@@ -44,8 +43,8 @@ jobs:
         with:
           repo: pulumi/pulumictl
       - name: Set up Go
-        uses: actions/setup-go@v5
+        uses: actions/setup-go@v6
         with:
-          go-version: 1.24.x
+          go-version-file: go.mod
       - name: Lint
         run: make lint-copyright
