Update language tests

--- a/cmd/pulumi-language-yaml/testdata/projects/l2-plain/Main.yaml
+++ b/cmd/pulumi-language-yaml/testdata/projects/l2-plain/Main.yaml
@@ -24,3 +24,21 @@ resources:
         stringMap:
           x: '100'
           y: '200'
+  emptyListRes:
+    type: plain:Resource
+    properties:
+      data:
+        innerData:
+          boolean: false
+          float: 0
+          integer: 0
+          string: ""
+          boolArray: []
+          stringMap: {}
+        boolean: false
+        float: 0
+        integer: 0
+        string: ""
+        boolArray: []
+        stringMap: {}
+      dataList: []
