--- a/cmd/pulumi-language-yaml/testdata/projects/l2-camel-names/Main.yaml
+++ b/cmd/pulumi-language-yaml/testdata/projects/l2-camel-names/Main.yaml
@@ -7,3 +7,8 @@ resources:
     type: camelNames:CoolModule:SomeResource
     properties:
       theInput: ${firstResource.theOutput}
+  thirdResource:
+    type: camelNames:CoolModule:SomeResource
+    properties:
+      theInput: true
+      resourceName: my-cluster
